# proxima

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: gh-pages.yml
benchmark/: README.md  __init__.py  requirements.txt
benchmark/common/: __init__.py  exceptions.py  mysql_utils.py  proxima2_dataset.py  proxima_be_query.py  proxima_be_repo.py  proxima_be_service.py  runner.py
benchmark/scripts/: build_bench.py  query_bench.py  recall.py  vec2txt.py
benchmark/sql/: create_table.sql
benchmark/tests/: service_test.py
cmake/: README.md  bazel.cmake  option.cmake
docs/: README.md  config.toml  package.json
docs/layouts/: 404.html
docs/scripts/: build.sh
scripts/: gcc4.9-build.sh  gcc4.9-unittest.sh  gcc8.3-build.sh  gcc8.3-integration.sh  gcc8.3-unittest.sh  gcov.sh  install-git-hooks.sh
scripts/conf/: proxima_be.conf  proxima_se.conf
scripts/hooks/: clang-format.sh  common.sh  post-commit  pre-commit
sdk/: CMakeLists.txt
sdk/cpp/: CMakeLists.txt
sdk/go/: .gitignore  README.md  client_proxy.go  clients.go  const.go  doc.go  go.mod  go.sum  interfaces.go  options.go  status.go  types.go  utils.go  utils_test.go  version.go
sdk/java/: pom.xml
sdk/python/: requirements-dev.txt  requirements.txt  setup.py
src/: CMakeLists.txt
src/admin/: CMakeLists.txt  admin_agent.cc  admin_agent.h  admin_proto_converter.cc  admin_proto_converter.h
src/agent/: CMakeLists.txt  collection_counter.h  column_order.cc  column_order.h  index_agent.cc  index_agent.h  write_request.h
src/common/: CMakeLists.txt  auto_counter.h  config.cc  config.h  defer.h  error_code.cc  error_code.h  glogger.cc  (+16 more)
tests/: CMakeLists.txt
tools/: CMakeLists.txt  admin_client.cc  bench_client.cc  index_builder.cc  vecs_reader.h
(+474 files in other folders)
